# sdk-nrf

./: CODEOWNERS  west.yml
applications/apricity_gateway/: CMakeLists.txt  Kconfig  child_secure_partition_manager.conf  init.bat  prj.conf  prj_nrf9160_aprgwns.conf  sample.yaml
applications/asset_tracker/: Kconfig  prj.conf  prj_nrf9160_pca20035ns.conf  prj_thingy91_nrf9160_ns.conf  prj_thingy91_nrf9160ns.conf  thingy91_nrf9160ns.overlay
applications/asset_tracker_v2/: prj.conf
applications/nrf9160dk_demo/: CMakeLists.txt  Kconfig  README.rst  prj.conf  prj_qemu_x86.conf  sample.yaml
cmake/: multi_image.cmake
doc/nrf/: links.txt
ext/cjson/: cJSON.c  cJSON.h
include/: lte_uart_dfu.h  nrf_cloud.h
include/bluetooth/: gatt_dm.h
include/dfu/: dfu_target.h
include/net/: aws_iot.h  cloud.h  cloud_backend.h  fota_download.h  nrf_cloud.h  nrf_cloud_defs.h  nrf_cloud_pgps.h
lib/: CMakeLists.txt  Kconfig
lib/bsdlib/: Kconfig  nrf91_sockets.c
lib/lte_uart_dfu/: CMakeLists.txt  Kconfig  lte_uart_dfu.c
lib/modem_info/: modem_info.c  modem_info_json.c
lib/modem_jwt/: modem_jwt.c
lib/nrf_modem_lib/: nrf91_sockets.c
modules/cjson/: Kconfig
modules/mcuboot/: CMakeLists.txt
modules/trusted-firmware-m/: Kconfig
samples/nrf9160/nrf_cloud_coap_client/: CMakeLists.txt  Kconfig  README.rst  overlay-debug.conf  overlay-mbedtls.conf  overlay-nrf-mbedtls.conf  overlay-nrf7002ek-wifi-scan-only.conf  overlay-offload-tls.conf  prj.conf  sample.yaml
samples/nrf9160/nrf_cloud_coap_client/cddl/: nrf_cloud_coap.cddl  nrf_cloud_coap_agps.cddl  nrf_cloud_coap_device_msg.cddl  nrf_cloud_coap_ground_fix.cddl  nrf_cloud_coap_pgps.cddl
samples/nrf9160/nrf_cloud_coap_client/src/: agps_encode.c  agps_encode.h  agps_encode_types.h  agps_fetch_encode.c  agps_fetch_encode.h  app_jwt.c  app_jwt.h  ca.crt  ca_cert.h  coap_client.c  coap_client.h  coap_codec.c  coap_codec.h  dtls.c  ground_fix_decode.c  ground_fix_decode.h  ground_fix_decode_types.h  ground_fix_encode.c  ground_fix_encode.h  ground_fix_encode_types.h  main.c  msg_encode.c  msg_encode.h  msg_encode_types.h  nrf_cloud_coap.c  nrf_cloud_coap.h  scan_wifi.c
samples/wifi/nrf_cloud_wifi/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/wifi/nrf_cloud_wifi/src/: atob.c  libc_support.c  libc_support.h  main.c  scanf.c  strtod.c
subsys/bluetooth/: gatt_dm.c
subsys/debug/: Kconfig
subsys/dfu/: CMakeLists.txt  (+1 more)
(+164 files in other folders)
